--- a/arindex.html
+++ b/arindex.html
@@ -103,7 +103,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-                       <img src="photo_5879529256214707253_y.jpg" class="img-fluid" alt="">
+                       <img src="" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>UI/UX Designer &amp; Web Developer.</h3>
